@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<!-- This file is part of Coog. The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tree>
+    <field name="agent"/>
+    <field name="contract"/>
+    <field name="consistency"/>
+    <field name="line"/>
+    <field name="start"/>
+    <field name="end"/>
+    <field name="commissions" tree_invisible="1"/>
+</tree>
