@@ -1,3 +1,4 @@
+* BUG#9262 Fix redeemed while synchronizing prepayment
 * OTH#0000 Hotfix prepayment synchronization batch
 * BUG#8871 Processing paid linear commissions differently: Create an adjustement line
 * BUG#8836 Do not generate prepayment commissions when difference between the paid commissions and redeemed prepayments is of the order of some rulings
